--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Jenna Breaks Things
 email: murrelljenna@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Googl=e search results) and in your feed.xml site description.
+  I write about computer things. Sometimes I'm right.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  murrelljenna
